<resources>
    <string name="app_name">lab02</string>
    <string name="bmi">BMI</string>
    <string name="weight">Weight</string>
    <string name="hint_weight">70</string>
    <string name="hint_height">180</string>
    <string name="kg">Kg</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="calculate">CALCULATE</string>
    <string name="normal_range">(Normal range is 18.5 - 24.9)</string>
</resources>